Adds code for publication

--- a/publications.html
+++ b/publications.html
@@ -16,7 +16,8 @@ ol li{
 <ol type="1", class="c">
  <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci <b>Please hold on: more time = more patches?
 Automated program repair as anytime algorithms</b>. To Appear in 2nd International Workshop on Automated Program Repair (APR 2021). <a
-        href="papers/apr2021.pdf">Camera-ready</a> </li>
+        href="papers/apr2021.pdf">Camera-ready</a>, <a
+        href="https://github.com/assuremoss/Automated-Program-Repair/tree/main/AnyTime">Code</a></li>
    <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
         Antonino Sabetta. <b>Poster: Towards Using Source Code Repositories to Identify Software
 Supply Chain Attacks</b>. To Appear in Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security. <a
@@ -35,7 +36,7 @@ Supply Chain Attacks</b>. To Appear in Proceedings of the 2020 ACM SIGSAC Confer
             Preliminary Findings on FOSS Dependencies and Security A Qualitative
             Study on Developers’ Attitudes and Experience</b>. 2020 IEEE/ACM 41st International Conference on Software Engineering: Companion Proceedings (ICSE-Companion). <a href="https://drive.google.com/file/d/1k4MacsYAJvaP9d0jH6LaDeXGg80w-AHz/view?usp=sharing">Paper</a></li>
     <li><u>Duc‐Ly Vu</u>, Trong‐Kha Nguyen, Tam V Nguyen, Tu N Nguyen, Fabio
-        Massacci, Phu H Phung. <b>HIT4Mal: Hybrid image transformation for malware classification</b>. Transactions on Emerging Telecommunications Technologies, 2019. <a href="https://drive.google.com/file/d/1VQ1JmK6qzRRjS-Q-VHP4wJzst7fZBkaY/view?usp=sharing">Paper</a></li>
+        Massacci, Phu H Phung. <b>HIT4Mal: Hybrid image transformation for malware classification</b>. Transactions on Emerging Telecommunications Technologies, 2019. <a href="https://drive.google.com/file/d/1VQ1JmK6qzRRjS-Q-VHP4wJzst7fZBkaY/view?usp=sharing">Paper</a>, <a href="https://github.com/vuduclyunitn/image_based_malware_detection">Code</a></li>
     <li> <u>Duc-Ly Vu</u> and Trong‐Kha Nguyen and Tam V Nguyen and Tu N Nguyen
         and Fabio Massacci and Phu H Phung. <b>A Convolutional Transformation Network for Malware Classification</b>. 6th NAFOSTED Conference on
         Information and Computer Science (NICS), 2019. <a href="https://drive.google.com/file/d/1OiLXE6VzaDZu30YynL_F8djr2auCQnJL/view?usp=sharing">
