--- a/daily_lessons_learned.html
+++ b/daily_lessons_learned.html
@@ -1,1 +1,23 @@
-- I have learned how to automatically crawl asp.net websites, they are not easy, and requires Selenium to interactation and extraction.
+<!DOCTYPE html>
+<html>
+
+<head>
+<style>
+ol li{
+ font-size:18px;
+}
+</style>
+</head>
+
+<body>
+
+<h2>Daily lession learned</h2>
+
+<ol type="1", class="c">
+ <li>I have learned how to automatically crawl asp.net websites, they are not easy, and requires Selenium to interactation and extraction.</li>
+ 
+</ol>
+
+</body>
+</html>
+
