--- a/quotes.html
+++ b/quotes.html
@@ -16,5 +16,9 @@ Wind, Sand, and Stars,
 1939
 </blockquote>
 
+  
+<blockquote >
+22/03/2021: "Put yourself, and your work, out there every day, and you'll start meeting some amazing people." Bobby Solomon
+</blockquote>
 </body>
 </html>
