--- a/lessonlearns.html
+++ b/lessonlearns.html
@@ -15,7 +15,7 @@ ol li{
 
 <ol type="1", class="c">
  <li>I have learned how to automatically crawl asp.net websites, they are not easy, and requires Selenium to interactation and extraction.</li>
- 
+  <li>To avoid blocking by websites while scrapting, we can use vpn either programatically or manually, this makes the crawler more effective</li>
 </ol>
 
 </body>
