--- a/books.html
+++ b/books.html
@@ -9,6 +9,8 @@
 <li><strong>Old Path White Clouds (Đường xưa mây trắng)</strong>. Thich Nhat Hanh</li>
 <li><strong>Atomic Habits: An Easy &amp; Proven Way to Build Good Habits &amp; Break Bad Ones</strong>. James Clear</li>
 <li><strong>THINK STRAIGHT: Change Your Thoughts, Change Your Life</strong> by Darius Foroux</li>
+<li><strong>Show Your Work!</strong> by Austin Kleon</li>
+  
 </ul>
 <h3 id="programming-books">Programming books</h3>
 <ul>
