--- a/books.html
+++ b/books.html
@@ -26,7 +26,8 @@
 <li><strong>Mythical Man-Month, The: Essays on Software Engineering, Anniversary Edition</strong>Brooks Jr., Frederick </li>
 <li><strong>BEYOND THE BASIC STUFF WITH PYTHON*</strong>Al Sweigart</li>
 <li><strong>The Pragmatic Programmer</strong>Andy Hunt and Dave Thomas</li>
-  
+ <li><strong>The Practice of Programming </strong>Brian Kernighan and Rob Pike</li>
+ 
 </ul>
 <h3 id="data-science-and-machine-learning">Data Science and Machine learning</h3>
 <ul>
