"When peoper realize they're being listned to, they tell you things."

--- a/quotes.html
+++ b/quotes.html
@@ -20,5 +20,9 @@ Wind, Sand, and Stars,
 <blockquote >
 22/03/2021: "Put yourself, and your work, out there every day, and you'll start meeting some amazing people." Bobby Solomon
 </blockquote>
+  
+  <blockquote >
+22/03/2021: "When peoper realize they're being listned to, they tell you things." Richar Ford
+</blockquote>
 </body>
 </html>
