--- a/quotes.html
+++ b/quotes.html
@@ -22,7 +22,11 @@ Wind, Sand, and Stars,
 </blockquote>
   
   <blockquote >
-22/03/2021: "When peoper realize they're being listned to, they tell you things." Richar Ford
+26/03/2021: "When peoper realize they're being listned to, they tell you things." Richar Ford
+</blockquote>
+  
+  <blockquote >
+26/03/2021: "I want to be intelligent and honest and kind. I'm still working on "kind"." The film Divergent
 </blockquote>
 </body>
 </html>
