--- a/publications.html
+++ b/publications.html
@@ -15,18 +15,18 @@ ol li{
 
 <ol type="1", class="c">
  <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci <b>Please hold on: more time = more patches?
-Automated program repair as anytime algorithms</b>. To Appear in 2nd International Workshop on Automated Program Repair (APR 2021). <a
+Automated program repair as anytime algorithms</b>. To Appear in 2nd International Workshop on Automated Program Repair (APR 2021) In conjunction with 43rd International Conference on Software Engineering (ICSE 2021). <a
         href="papers/apr2021.pdf">Camera-ready</a>, <a
         href="https://github.com/assuremoss/Automated-Program-Repair/tree/main/AnyTime">Code</a></li>
    <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
-        Antonino Sabetta. <b>Poster: Towards Using Source Code Repositories to Identify Software
+        Antonino Sabetta. <b>Towards Using Source Code Repositories to Identify Software
 Supply Chain Attacks</b>. To Appear in Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security. <a
         href="https://drive.google.com/file/d/1huQ5myhpEb3MOKuzjVGjwJzq31mUDTMS/view?usp=sharing">Paper</a> </li>
     <li><u>Duc-Ly Vu</u>. <b>What Developers Want for FOSS Dependency Management? Open Problems from
             a Qualitative Study</b>. REFSQ 2020 Doctoral Symposium. </li>
     <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
         Antonino Sabetta. <b>Typosquatting and Combosquatting Attacks on the
-            Python Ecosystem</b>. To Appear in Proceedings of the 2nd Workshop on Attackers and Cyber-Crime Operations (WACCO 2020), 2020 . <a
+            Python Ecosystem</b>. To Appear in Proceedings of the 2nd Workshop on Attackers and Cyber-Crime Operations (WACCO 2020), 2020 is co-located with the 5th IEEE European Symposium on Security and Privacy (EuroS&P 2020). <a
         href="https://drive.google.com/file/d/1P1-zhNXrnzQrZTUZyDnG4qkHlmBZaYQb/view?usp=sharing">Camera-ready Paper</a> </li>
     <li>Ivan Pashchenko, <u>Duc-Ly Vu</u>, Fabio Massacci. <b>A Qualitative
             Study of Dependency Management and Its Security Implications</b>.
