--- a/publications.html
+++ b/publications.html
@@ -20,17 +20,17 @@ Automated program repair as anytime algorithms</b>. To Appear in 2nd Internation
         href="https://github.com/assuremoss/Automated-Program-Repair/tree/main/AnyTime">Code</a></li>
    <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
         Antonino Sabetta. <b>Towards Using Source Code Repositories to Identify Software
-Supply Chain Attacks</b>. To Appear in Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security. <a
+Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security. <a
         href="https://drive.google.com/file/d/1huQ5myhpEb3MOKuzjVGjwJzq31mUDTMS/view?usp=sharing">Paper</a> </li>
     <li><u>Duc-Ly Vu</u>. <b>What Developers Want for FOSS Dependency Management? Open Problems from
             a Qualitative Study</b>. REFSQ 2020 Doctoral Symposium. </li>
     <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
         Antonino Sabetta. <b>Typosquatting and Combosquatting Attacks on the
-            Python Ecosystem</b>. To Appear in Proceedings of the 2nd Workshop on Attackers and Cyber-Crime Operations (WACCO 2020), 2020 is co-located with the 5th IEEE European Symposium on Security and Privacy (EuroS&P 2020). <a
+            Python Ecosystem</b>. In Proceedings of the 2nd Workshop on Attackers and Cyber-Crime Operations (WACCO 2020), 2020 is co-located with the 5th IEEE European Symposium on Security and Privacy (EuroS&P 2020). <a
         href="https://drive.google.com/file/d/1P1-zhNXrnzQrZTUZyDnG4qkHlmBZaYQb/view?usp=sharing">Camera-ready Paper</a> </li>
     <li>Ivan Pashchenko, <u>Duc-Ly Vu</u>, Fabio Massacci. <b>A Qualitative
             Study of Dependency Management and Its Security Implications</b>.
-        To Appear in Proceedings of the ACM Conference on Computer and Communications Security (CCS), 2020.<a
+        In Proceedings of the ACM Conference on Computer and Communications Security (CCS), 2020.<a
             href="https://drive.google.com/file/d/1YY-Ly6y04G4BK3q1SvEERTJxumHzj6CG/view?usp=sharing">Camera-ready Paper</a></li>
     <li>Ivan Pashchenko, <u>Duc-Ly Vu</u>, Fabio Massacci. <b>
             Preliminary Findings on FOSS Dependencies and Security A Qualitative
