--- a/publications.html
+++ b/publications.html
@@ -44,8 +44,11 @@ Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Co
     <li>Pham, Duy-Phuc and <u>Duc-Ly Vu</u> and Massacci, Fabio. <b>Mac-A-Mal:
             macOS malware analysis framework resistant to anti evasion
             techniques</b>. Journal of Computer Virology and Hacking Techniques,
-        2019. <a
-                  href="https://link.springer.com/article/10.1007/s11416-019-00335-w">Paper</li>
+        2019. <a href="https://link.springer.com/article/10.1007/s11416-019-00335-w">Paper</li>
+         <li>Trong-Kha Nguyen and <u>Duc-Ly Vu</u> and Seong Oun Hwang. <b>Effective feature selection based on MANOVA</b> International Journal of Internet Technology and Secured Transactions
+        2020. <a href="https://www.inderscienceonline.com/doi/abs/10.1504/IJITST.2020.108133">Paper</li>
+         <li>Trong-Kha Nguyen and <u>Duc-Ly Vu</u> and Seong Oun Hwang. <b>An efficient neural network model for time series forecasting of malware</b>
+        Journal of Intelligent & Fuzzy Systems, 2018. <a href="https://content.iospress.com/articles/journal-of-intelligent-and-fuzzy-systems/ifs169849">Paper</li>
 </ol>
 
 </body>
