updates some automated scripts info

--- a/projects.html
+++ b/projects.html
@@ -12,5 +12,7 @@
 <li><a href="https://colab.research.google.com/github/vuduclyunitn/learning_python/blob/master/Anti_patterns.ipynb">The Little Book of Python Anti-Patterns in Vietnamese</a>. </li>
 <li><a href="https://github.com/lyvd/intermediatePython-vi">IntermediatePython in Vietnamese</a> (In translating).</li>
 <li><a href="https://github.com/vuduclyunitn/software_supply_chain_papers">Collection of software supply chain papers</a> (Updating regularly).</li>
+<li><a href="">I have made an automated script to automate the google forms using Selenium, I hope to share them after the Covid-19 ends.</li>
+<li><a href="">I have made an automated script to automate the ASP.net sites using Selenium, I hope to share them very soon.</li>
 
 </ul>
