--- a/books.html
+++ b/books.html
@@ -27,7 +27,8 @@
 <li><strong>BEYOND THE BASIC STUFF WITH PYTHON*</strong>Al Sweigart</li>
 <li><strong>The Pragmatic Programmer</strong>Andy Hunt and Dave Thomas</li>
  <li><strong>The Practice of Programming </strong>Brian Kernighan and Rob Pike</li>
- 
+  <li><strong>The Linux Programming Interface </strong>Michael Kerrisk</li>
+
 </ul>
 <h3 id="data-science-and-machine-learning">Data Science and Machine learning</h3>
 <ul>
