Adds google scholar and researchgate

--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@ body {
         of Python programming languagle, I like to help the others to automate the boring stuff.
         In my free time, I like reading books (especially self-help books) and playing guitar (I am learning keyboard now). I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>. 
         You can contact me by <a href = "mailto: vuducly151092@gmail.com">Email</a></p>
+      
+  <li><a href="https://scholar.google.com/citations?user=sl1ofC0AAAAJ&hl=en&oi=sra">My Google Scholar</a></li>
+        <li><a href="https://www.researchgate.net/profile/Duc-Ly-Vu">My ResearchGate</a></li>
+
     </div>
 
     <a class="twitter-timeline" data-width="300" data-height="300" href="https://twitter.com/vuly16?ref_src=twsrc%5Etfw">Tweets by vuly16</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
