Quote of Susan Sontag

--- a/quotes.html
+++ b/quotes.html
@@ -28,5 +28,9 @@ Wind, Sand, and Stars,
   <blockquote >
 26/03/2021: "I want to be intelligent and honest and kind. I'm still working on "kind"." The film Divergent
 </blockquote>
+  
+  <blockquote >
+27/03/2021: "It's all about paying attention. Attention is vitality. It connects you with others" Susan Sontag
+</blockquote>
 </body>
 </html>
