--- a/index.html
+++ b/index.html
@@ -131,9 +131,12 @@ body {
         of Python programming languagle, I like to help the others to automate the boring stuff.
         In my free time, I like reading books (especially self-help books) and playing guitar (I am learning keyboard now). I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>. 
         You can contact me by <a href = "mailto: vuducly151092@gmail.com">Email</a></p>
-      
+    <p>  
+              <li><a href="https://www.linkedin.com/in/ly-vu-865b5819b/">My LinkedIn</a></li>
+
   <li><a href="https://scholar.google.com/citations?user=sl1ofC0AAAAJ&hl=en&oi=sra">My Google Scholar</a></li>
         <li><a href="https://www.researchgate.net/profile/Duc-Ly-Vu">My ResearchGate</a></li>
+      </p>
 
     </div>
 
