"You just have to be as generous as you can, but selfish enough to get your work done"

--- a/quotes.html
+++ b/quotes.html
@@ -32,5 +32,9 @@ Wind, Sand, and Stars,
   <blockquote >
 27/03/2021: "It's all about paying attention. Attention is vitality. It connects you with others" Susan Sontag
 </blockquote>
+  
+    <blockquote >
+27/03/2021: "You just have to be as generous as you can, but selfish enough to get your work done" Austin Kleon
+</blockquote>
 </body>
 </html>
