"The minute you stop wanting something you get it" Andy Warhol

--- a/quotes.html
+++ b/quotes.html
@@ -36,5 +36,9 @@ Wind, Sand, and Stars,
     <blockquote >
 27/03/2021: "You just have to be as generous as you can, but selfish enough to get your work done" Austin Kleon
 </blockquote>
+  
+      <blockquote >
+28/03/2021: "The minute you stop wanting something you get it" Andy Warhol
+</blockquote>
 </body>
 </html>
