--- a/lessonlearns.html
+++ b/lessonlearns.html
@@ -17,7 +17,9 @@ ol li{
  <li>I have learned how to automatically crawl asp.net websites, they are not easy, and requires Selenium to interactation and extraction.</li>
   <li>To avoid blocking by websites while scrapting, we can use vpn either programatically or manually, this makes the crawler more effective</li>
  <li>Just learn about the buffer cache when operating with files, the contents of files are not written directly into disks but resided at buffer for speed</li>
-</ol>
+ <li>28/03/2021: Learn how to inteprete the CIA model properly, thanks for some example from the book How cybersecurity works/li>
+
+ </ol>
 
 </body>
 </html>
