--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,6 @@
-
+I am a contributor of several open-source projects including: <a href="https://github.com/IQTLabs/software-supply-chain-compromises">Software Supply Chain Compromises - A Living Dataset</a>,
+<a href="https://github.com/cybertier/Backstabbers-Knife-Collection">Backstabber's Knife Collection</a>,
+<a href="https://github.com/assuremoss/Automated-Program-Repair">Automated-Program-Repair</a>
 <ul>
   <li><a href="https://github.com/lyvd/bandit4mal">bandit4mal: A fork of Bandit tool with patterns to identifying malicious python code.</a></li>
   <li><a href="https://github.com/lyvd/C2Ass">C2Ass: Simluate assembly code for learning purpose.</a></li>
