--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ body {
   <div class="leftcolumn">
     <div class="card">
       <h3>Hello, My name is Ly Vu Duc, I am from Binh Phuoc, Vietnam. Currently,
-      I am a third year Ph.D student at the University of Trento, Italy</h3>. From 01/04/2021, I am a contributing member of the Python Software Foundation (PSF).
+      I am a third year Ph.D student at the University of Trento, Italy working on software supply chain security for open-source software and automated program repair</h3>. From 01/04/2021, I am a contributing member of the Python Software Foundation (PSF).
       I was an Early stage researcher (ESR) of the <a href="https://www.necs-project.eu/">NECS project</a>
      . Currently, I am working for the <a href="https://assuremoss.eu//">AssureMoss project</a>. I had a chance to work at SAP Security
       Research, France on the topic of software supply chain attacks. During the internship, we developed an approach to detect
