--- a/publications.html
+++ b/publications.html
@@ -51,6 +51,16 @@ Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Co
         Journal of Intelligent & Fuzzy Systems, 2018. <a href="https://content.iospress.com/articles/journal-of-intelligent-and-fuzzy-systems/ifs169849">Paper</li>
 </ol>
 
+ <h2>Publications</h2>
+<ol type="1", class="c">
+ <li> <b>MAL2IMAGE: Hybrid Image Transformation for Malware Classification</b>
+        Joint DIMVA / ESSoS Poster Session, 2018 <a href="https://distrinet.cs.kuleuven.be/events/essos/2018/index.html"</li>
+  <li> <b>Requirements from the Trenches: What Developers Want for FOSS Dependency Management?</b>
+        REFSQ, 2020 <a href="https://refsq.org/2020/conference-programme/doctoral-symposium"</li>
+   <li> <b>Typosquatting and Combosquatting Attacks on the Python Ecosystem</b>
+        WACCO, 2020 <a href="https://wacco-workshop.org/past/2020/index.html"</li>
+ </ol>
+
 </body>
 </html>
 
