--- a/publications.html
+++ b/publications.html
@@ -51,7 +51,7 @@ Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Co
         Journal of Intelligent & Fuzzy Systems, 2018. <a href="https://content.iospress.com/articles/journal-of-intelligent-and-fuzzy-systems/ifs169849">Paper</li>
 </ol>
 
- <h2>Publications</h2>
+ <h2>Talks</h2>
 <ol type="1", class="c">
  <li> <b>MAL2IMAGE: Hybrid Image Transformation for Malware Classification</b>
         Joint DIMVA / ESSoS Poster Session, 2018 <a href="https://distrinet.cs.kuleuven.be/events/essos/2018/index.html"</li>
