learn pattern matching

--- a/lessonlearns.html
+++ b/lessonlearns.html
@@ -19,7 +19,7 @@ ol li{
  <li>Just learn about the buffer cache when operating with files, the contents of files are not written directly into disks but resided at buffer for speed</li>
  <li>28/03/2021: Learn how to inteprete the CIA model properly, thanks for some example from the book How cybersecurity works/li>
  <li>30/03/2021: Learn how the rm command works </li>
-
+ <li>04/04/2021: Learn how the pattern matching in Python 3.10 </li>
  </ol>
 
 </body>
