04/04/2021: "The most important days in your life are the day you were born and the day you find out why." Mark Twain

--- a/quotes.html
+++ b/quotes.html
@@ -40,5 +40,8 @@ Wind, Sand, and Stars,
       <blockquote >
 28/03/2021: "The minute you stop wanting something you get it" Andy Warhol
 </blockquote>
+  <blockquote >
+04/04/2021: "The most important days in your life are the day you were born and the day you find out why." Mark Twain
+</blockquote>
 </body>
 </html>
