Learn to be humble, to be calm, to breath deeply

--- a/lessonlearns.html
+++ b/lessonlearns.html
@@ -20,6 +20,8 @@ ol li{
  <li>28/03/2021: Learn how to inteprete the CIA model properly, thanks for some example from the book How cybersecurity works/li>
  <li>30/03/2021: Learn how the rm command works </li>
  <li>04/04/2021: Learn how the pattern matching in Python 3.10 </li>
+  <li>54/04/2021: Learn to be humble, to be calm, to breath deeply </li>
+
  </ol>
 
 </body>
