--- a/quotes.html
+++ b/quotes.html
@@ -43,5 +43,10 @@ Wind, Sand, and Stars,
   <blockquote >
 04/04/2021: "The most important days in your life are the day you were born and the day you find out why." Mark Twain
 </blockquote>
+  
+  <blockquote >
+08/04/2021: There's a place for everything, and everything is in its place
+    </blockquote>
+
 </body>
 </html>
