--- a/quotes.html
+++ b/quotes.html
@@ -45,7 +45,7 @@ Wind, Sand, and Stars,
 </blockquote>
   
   <blockquote >
-08/04/2021: There's a place for everything, and everything is in its place
+08/04/2021: "There's a place for everything, and everything is in its place". The Rust Programming Language
     </blockquote>
 
 </body>
