--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@ body {
   <li><a href="publications.html">Publications</a></li>
   <li><a href="lessonlearns.html">Daily lessons learned</a></li>
    <li><a href="quotes.html">Quotes</a></li>
+     <li><a href="photos.html">Photos</a></li>
+
   <li><a href="contacts.html">Contact</a></li>
  
 </ul>
