--- a/photos.html
+++ b/photos.html
@@ -3,7 +3,7 @@
 <body>
 
 <h2>HTML Image</h2>
-<img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
+<img src="https://bl6pap004files.storage.live.com/y4m0b_OqG8xjPLDN1H40lL3eRx9C1FRpDhELbGIndu_UDWZwYmTToVxdHSdr5SxQQpvT-w_q9dck_5XkJFy80W7EOZtRkpQ-LKHGGJBgqht29aGi5XZxcKJJwZ8ASIekO7ifHtknc-vfUp4VZxozHin6c55mVVZLIBQDFiGjuGc1QYgpjuWM-EuS3G2VmgbTTDM?width=6000&height=4000&cropmode=none" alt="A Algeria Wedding in France" width="500" height="333">
 
 </body>
 </html>
