--- a/photos.html
+++ b/photos.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<img src="https://bl6pap004files.storage.live.com/y4m0b_OqG8xjPLDN1H40lL3eRx9C1FRpDhELbGIndu_UDWZwYmTToVxdHSdr5SxQQpvT-w_q9dck_5XkJFy80W7EOZtRkpQ-LKHGGJBgqht29aGi5XZxcKJJwZ8ASIekO7ifHtknc-vfUp4VZxozHin6c55mVVZLIBQDFiGjuGc1QYgpjuWM-EuS3G2VmgbTTDM?width=6000&height=4000&cropmode=none" alt="A Algeria Wedding in France">
-<img src="https://bl3302files.storage.live.com/y4mr-rjBdPU2eNgIxKLh5ROH1rhW7h3VvKkwy6qdyt2F2XEP9va0wL1caRc4PRv6zRT6IQwSCv1vhl68GTbjRIcC7W8lqh_d0MuSFrI3ffg1ykdMZm1o88v7ig2wupvvQSQFqrvCcGZCyBCHuiKodPQ0dECetRs2FuOxlUu7NwWCrXA4OHwiUfImY6p4GPOzlyh?width=6000&height=4000&cropmode=none" width="6000" height="4000" />
+<img src="https://bl6pap003files.storage.live.com/y4m0b_OqG8xjPLDN1H40lL3eRx9C1FRpDhELbGIndu_UDWZwYmTToVxdHSdr5SxQQpvT-w_q9dck_5XkJFy80W7EOZtRkpQ-LKHGGJBgqht29aGi5XZxcKJJwZ8ASIekO7ifHtknc-vfUp4VZxozHin6c55mVVZLIBQDFiGjuGc1QYgpjuWM-EuS3G2VmgbTTDM?width=6000&height=4000&cropmode=none" width="6000" height="4000" />
+  <img src="https://bl3302files.storage.live.com/y4mr-rjBdPU2eNgIxKLh5ROH1rhW7h3VvKkwy6qdyt2F2XEP9va0wL1caRc4PRv6zRT6IQwSCv1vhl68GTbjRIcC7W8lqh_d0MuSFrI3ffg1ykdMZm1o88v7ig2wupvvQSQFqrvCcGZCyBCHuiKodPQ0dECetRs2FuOxlUu7NwWCrXA4OHwiUfImY6p4GPOzlyh?width=6000&height=4000&cropmode=none" width="6000" height="4000" />
 </body>
 </html>
