add css to resize image

--- a/photos.html
+++ b/photos.html
@@ -1,5 +1,23 @@
 <!DOCTYPE html>
 <html>
+  <head>
+<style>
+div {
+  width:80vw;
+  height:80vh;
+  background:yellow;
+  display:table-cell;
+  vertical-align:middle;
+  text-align:center;
+}
+img {
+  max-width:100%;
+  height:auto;
+  max-height:100%;
+  }in-left: 40px;
+}
+</style>
+</head>
 <body>
 
 <img src="https://bl6pap003files.storage.live.com/y4m0b_OqG8xjPLDN1H40lL3eRx9C1FRpDhELbGIndu_UDWZwYmTToVxdHSdr5SxQQpvT-w_q9dck_5XkJFy80W7EOZtRkpQ-LKHGGJBgqht29aGi5XZxcKJJwZ8ASIekO7ifHtknc-vfUp4VZxozHin6c55mVVZLIBQDFiGjuGc1QYgpjuWM-EuS3G2VmgbTTDM?width=6000&height=4000&cropmode=none" width="6000" height="4000" />
