--- a/quotes.html
+++ b/quotes.html
@@ -40,10 +40,10 @@ Wind, Sand, and Stars,
       <blockquote >
 28/03/2021: "The minute you stop wanting something you get it" Andy Warhol
 </blockquote>
-  <blockquote >
+  < >
 04/04/2021: "The most important days in your life are the day you were born and the day you find out why." Mark Twain
 </blockquote>
-  
+  It’s not enough just being clever. You have to get along with others.’
   <blockquote >
 08/04/2021: "There's a place for everything, and everything is in its place". The Rust Programming Language
     </blockquote>
