--- a/lessonlearns.html
+++ b/lessonlearns.html
@@ -22,6 +22,7 @@ ol li{
  <li>04/04/2021: Learn how the pattern matching in Python 3.10 </li>
   <li>5/04/2021: Learn to be humble, to be calm, to breath deeply </li>
   <li>08/04/2021: First impression of Rust programming language is great! </li>
+  <li>17/04/2021: Learning a programming helps me understand the other concepts in computing in general </li>
 
  </ol>
 
