--- a/lessonlearns.html
+++ b/lessonlearns.html
@@ -23,6 +23,7 @@ ol li{
   <li>5/04/2021: Learn to be humble, to be calm, to breath deeply </li>
   <li>08/04/2021: First impression of Rust programming language is great! </li>
   <li>17/04/2021: Learning a programming helps me understand the other concepts in computing in general </li>
+  <li>17/04/2021: Rust provides an intuitive suggestion to fix programming errors. Great!</li>
 
  </ol>
 
