--- a/lessonlearns.html
+++ b/lessonlearns.html
@@ -24,6 +24,7 @@ ol li{
   <li>08/04/2021: First impression of Rust programming language is great! </li>
   <li>17/04/2021: Learning a programming helps me understand the other concepts in computing in general </li>
   <li>17/04/2021: Rust provides an intuitive suggestion to fix programming errors. Great!</li>
+  <li>19/04/2021: Really understand the heap and stack by learning the Rust ownership</li>
 
  </ol>
 
