--- a/index.html
+++ b/index.html
@@ -137,12 +137,10 @@ body {
       
       <p>I only make friends on Facebook with those I really know, those I really wanted to talk to. I share something on FB and you can follow me if you want.
       I want to make friends with those who share useful stuff that I can learn from</p>
-    <p>  
-              <li><a href="https://www.linkedin.com/in/ly-vu-865b5819b/">My LinkedIn</a></li>
+    <p>  <a href="https://www.linkedin.com/in/ly-vu-865b5819b/">My LinkedIn</a></p>
 
-  <li><a href="https://scholar.google.com/citations?user=sl1ofC0AAAAJ&hl=en&oi=sra">My Google Scholar</a></li>
-        <li><a href="https://www.researchgate.net/profile/Duc-Ly-Vu">My ResearchGate</a></li>
-      </p>
+  <p><a href="https://scholar.google.com/citations?user=sl1ofC0AAAAJ&hl=en&oi=sra">My Google Scholar</a></p>
+        <p><a href="https://www.researchgate.net/profile/Duc-Ly-Vu">My ResearchGate</a></p>
 
     </div>
 
