--- a/lessonlearns.html
+++ b/lessonlearns.html
@@ -27,6 +27,7 @@ ol li{
   <li>19/04/2021: Really understand the heap and stack by learning the Rust ownership</li>
   <li>19/04/2021: Starts eating vegetables more often againp</li>
   <li>03/05/2021: Understanding the fundamentals helps me feel at home when using higher level APIs</li>
+  <li>03/05/2021: Feeling that: Rust = Python + C++ :)</li>
 
  </ol>
 
