--- a/quotes.html
+++ b/quotes.html
@@ -47,6 +47,11 @@ Wind, Sand, and Stars,
   <blockquote >
 08/04/2021: "There's a place for everything, and everything is in its place". The Rust Programming Language
     </blockquote>
+  <blockquote >
 it is better to do significant things than to just get along through life to its end. Certainly near the end it is nice to look back at a life of accomplishments rather than a life where you have merely survived and amused yourself. Thus
-</body>
+   </blockquote>
+  <blockquote >
+    24/5/2021: "programming is about solving technical problems, but how you solve them, and how you think about them is important too" (Linus Torvalds)
+    </blockquote>
+    </body>
 </html>
