--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,10 @@ ol li{
 <h2>Publications</h2>
 
 <ol type="1", class="c">
+   <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
+        Antonino Sabetta. <b>LastPyMile: identifying the discrepancy between sources and
+packages</b>. To Appear In Proceedings of the The ACM 2021 Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE). <a
+        href="">Paper</a> </li>
  <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci <b>Please hold on: more time = more patches?
 Automated program repair as anytime algorithms</b>. To Appear in 2nd International Workshop on Automated Program Repair (APR 2021) In conjunction with 43rd International Conference on Software Engineering (ICSE 2021). <a
         href="papers/apr2021.pdf">Camera-ready</a>, <a
