--- a/books.html
+++ b/books.html
@@ -28,6 +28,7 @@
 <li><strong>The Pragmatic Programmer</strong>Andy Hunt and Dave Thomas</li>
  <li><strong>The Practice of Programming </strong>Brian Kernighan and Rob Pike</li>
   <li><strong>The Linux Programming Interface </strong>Michael Kerrisk</li>
+  <li><strong>Fluent Python Second edition</strong>Luciano Ramalho</li>
 
 </ul>
 <h3 id="data-science-and-machine-learning">Data Science and Machine learning</h3>
