update APR talk

--- a/publications.html
+++ b/publications.html
@@ -69,6 +69,7 @@ Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Co
         REFSQ, 2020 <a href="https://refsq.org/2020/conference-programme/doctoral-symposium"</li>
    <li> <b>Typosquatting and Combosquatting Attacks on the Python Ecosystem</b>
         WACCO, 2020 <a href="https://wacco-workshop.org/past/2020/index.html"</li>
+    <li> <b>Please hold on: more time = more patches? Automated program repair as anytime algorithms</b> 2nd International Workshop on Automated Program Repair (APR 2021) <a href="http://program-repair.org/workshop-2021/"</li>
  </ol>
 
 </body>
