fix py2src venue info

--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@ Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Co
 
  <h2>In Submission</h2>
  <ol type="1", class="c">
-     <li>Simone Pirroca, <u>Duc-Ly Vu</u>, Fabio Massacci, Ivan Pashchenko. <b>py2src: Automatic Identification of Source Code Repositories and Factors for Selecting New PyPI Packages</b>. To Appear In Proceedings of the The ACM 2021 Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE). <a
+     <li>Simone Pirroca, <u>Duc-Ly Vu</u>, Fabio Massacci, Ivan Pashchenko. <b>py2src: Automatic Identification of Source Code Repositories and Factors for Selecting New PyPI Packages</b><a
         href="">Submitted to the 15th ACM/IEEE International Symposium on Empirical Software Engineering and Measurement (ESEM)</a> </li>
   </ol>
  
