--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@ body {
       I am a member of <a href="https://securitylab.disi.unitn.it/doku.php">the Security and Cryptography at the University of Trento</a>. From 01/04/2021, I am a contributing member of the Python Software Foundation (PSF).
       I was an Early stage researcher (ESR) of the <a href="https://www.necs-project.eu/">NECS project</a>
      Currently, I am working for the <a href="https://assuremoss.eu//">AssureMoss project</a>. I had a chance to work at SAP Security
-      Research, France on the topic of software supply chain attacks. During the internship, we developed an approach to detect
+      Research, France on the topic of software supply chain attacks. During the internship, we developed an approach and tool called LastPyMile to detect
         code injections in software supply chain attacks, please check it out if you are interested <a href="https://dl.acm.org/doi/abs/10.1145/3372297.3420015">link</a>
       <p>I study and develop malware detection tools for computer systems. We developed an approach called <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ett.3789/">HIT4MAL</a> to classify malware using image transformations. Or a simple approach leveraging 
-        Levenshtein distance to flag potential typosquatinng packages <a href="https://ieeexplore.ieee.org/abstract/document/9229803">Link</a>
+        Levenshtein distance to flag potential typosquatinng packages <a href="https://ieeexplore.ieee.org/abstract/document/9229803">Link</a>. 
         </p>
       
       <p>I was studying and researching computer security at the Hongik university, South Korea. During that time, I have developed <a href="https://www.researchgate.net/profile/Duc_Ly_Vu/publication/344491557_DeepMal_Deep_Convolutional_and_Recurrent_Neural_Networks_for_Malware_Classification/links/5f7c3baf92851c14bcb17426/DeepMal-Deep-Convolutional-and-Recurrent-Neural-Networks-for-Malware-Classification.pdf">DeepMal</a>
