vinh quang cua su phi li

--- a/books.html
+++ b/books.html
@@ -60,7 +60,8 @@
 <ul>
 <li><strong>The Winning Side (Ben Thang Cuoc)</strong>. Huy Duc</li>
 <li><strong>Den Cu</strong>. Tran Dinh</li>
-<li><strong>When the Allies Ran Away (Khi đồng minh tháo chạy)</strong>. Nguyễn Tiến Hưng</li>
+<li><strong>When the Allies Ran Away (Khi đồng minh tháo chạy</strong>. Nguyễn Tiến Hưng</li>
+  <li><strong>Vinh Quang Cua Su Phi Ly: Tinh Yeu Cua Mot Phong Vien Cho Dan Toc Viet Nam Bi Bo Roi</strong>.Uwe Siemon-Netto </li>
 </ul>
 <h2 id="language-books">Language Books</h2>
 <ul>
