--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ body {
 
 <ul>
   <li><a class="active" href="#home">Home</a></li>
+     <li><a href="cv.html">CV</a></li>
     <li><a href="projects.html">Projects</a></li>
     <li><a href="books.html">My Favorite books</a></li>
   <li><a href="publications.html">Publications</a></li>
