--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
 <title>My CV</title>
 </head>
 <body>
-<embed src="papers/CV.pdf" width="800px" height="2100px" />
+<embed src="papers/CV.pdf" height="100%" width="100%" />
 
 
 </body>
