--- a/cv.html
+++ b/cv.html
@@ -2,9 +2,32 @@
 <html>
 <head>
 <title>My CV</title>
+  <style type="text/css">
+        html {
+            overflow: auto;
+        }
+          
+        html,
+        body,
+        div,
+        iframe {
+            margin: 0px;
+            padding: 0px;
+            height: 100%;
+            border: none;
+        }
+          
+        iframe {
+            display: block;
+            width: 100%;
+            border: none;
+            overflow-y: auto;
+            overflow-x: hidden;
+        }
+    </style>
 </head>
 <body>
-<embed src="papers/CV.pdf" height="100%" width="100%" />
+<embed src="papers/CV.pdf" />
 
 
 </body>
