--- a/cv.html
+++ b/cv.html
@@ -5,8 +5,7 @@
  
 </head>
 <body>
-<embed src="papers/CV.pdf" width="500" height="375" 
- type="application/pdf" />
+<embed src="papers/CV.pdf" width="500" height="375" type="application/pdf" />
 
 
 </body>
