--- a/books.html
+++ b/books.html
@@ -29,7 +29,7 @@
  <li><strong>The Practice of Programming </strong>Brian Kernighan and Rob Pike</li>
   <li><strong>The Linux Programming Interface </strong>Michael Kerrisk</li>
   <li><strong>Fluent Python Second edition</strong>Luciano Ramalho</li>
-
+  <li><strong>How computers really work</strong>Matthew Justice</li>
 </ul>
 <h3 id="data-science-and-machine-learning">Data Science and Machine learning</h3>
 <ul>
