quote by hamming

--- a/quotes.html
+++ b/quotes.html
@@ -53,5 +53,8 @@ it is better to do significant things than to just get along through life to its
   <blockquote >
     24/5/2021: "programming is about solving technical problems, but how you solve them, and how you think about them is important too" (Linus Torvalds)
     </blockquote>
+    <blockquote >
+    23/6/2021: "if you want to do significant things, now is the time to start thinking (if you have not already done so) and not wait until it is the proper moment—which may never arrive!” (Richard Hamming)
+    </blockquote>
     </body>
 </html>
