another quote of hamming

--- a/quotes.html
+++ b/quotes.html
@@ -56,5 +56,8 @@ it is better to do significant things than to just get along through life to its
     <blockquote >
     23/6/2021: "if you want to do significant things, now is the time to start thinking (if you have not already done so) and not wait until it is the proper moment—which may never arrive!” (Richard Hamming)
     </blockquote>
+      <blockquote >
+    23/6/2021: "An expert is one who knows everything about nothing; A generalist knows nothing about everything” (Richard Hamming)
+    </blockquote>
     </body>
 </html>
