add quote of Isaac Asimove

--- a/quotes.html
+++ b/quotes.html
@@ -59,5 +59,8 @@ it is better to do significant things than to just get along through life to its
       <blockquote >
     23/6/2021: "An expert is one who knows everything about nothing; A generalist knows nothing about everything” (Richard Hamming)
     </blockquote>
+        <blockquote >
+    3/7/2021: "Hardin once said, 'to succeed, planning along is insufficient. One must improvise as well.' I'll improvise” (Isaac Asimove)
+    </blockquote>
     </body>
 </html>
