--- a/books.html
+++ b/books.html
@@ -30,6 +30,8 @@
   <li><strong>The Linux Programming Interface </strong>Michael Kerrisk</li>
   <li><strong>Fluent Python Second edition</strong>Luciano Ramalho</li>
   <li><strong>How computers really work</strong>Matthew Justice</li>
+    <li><strong>A Philosophy of Software Design</strong>John Ousterhout</li>
+
 </ul>
 <h3 id="data-science-and-machine-learning">Data Science and Machine learning</h3>
 <ul>
