adds links to hacker news and reproducible builds

--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@ body {
   <div class="leftcolumn">
     <div class="card">
       <h3>Hello, My name is Ly Vu Duc, I am from Binh Phuoc, Vietnam. Currently,
-      I am a third year Ph.D student at the University of Trento, Italy supervised by <a href="https://fabiomassacci.github.io/">Prof. Fabio Massacci</a> and I am working on software supply chain security for open-source software and automated program repair</h3>.
+      I am a Ph.D candidate at the University of Trento, Italy supervised by <a href="https://fabiomassacci.github.io/">Prof. Fabio Massacci</a> and I am working on software supply chain security for open-source software and automated program repair</h3>.
       I am a member of <a href="https://securitylab.disi.unitn.it/doku.php">the Security and Cryptography at the University of Trento</a>. From 01/04/2021, I am a contributing member of the Python Software Foundation (PSF).
       I was an Early stage researcher (ESR) of the <a href="https://www.necs-project.eu/">NECS project</a>
      Currently, I am working for the <a href="https://assuremoss.eu//">AssureMoss project</a>. I had a chance to work at SAP Security
       Research, France on the topic of software supply chain attacks. During the internship, we developed an approach and tool called LastPyMile to detect
-        code injections in software supply chain attacks, please check it out if you are interested <a href="https://dl.acm.org/doi/abs/10.1145/3372297.3420015">link</a>
+        code injections in software supply chain attacks, please check it out if you are interested <a href="https://securitylab.disi.unitn.it/lib/exe/fetch.php?media=research_activities:experiments:esecfse2021.pdf">link</a>. This work is mentioned on <a href="https://news.ycombinator.com/item?id=28082179">HackerNews</a> and <a href="https://reproducible-builds.org/de/reports/2021-07/">Reproducible-builds</a>
       <p>I study and develop malware detection tools for computer systems. We developed an approach called <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ett.3789/">HIT4MAL</a> to classify malware using image transformations. Or a simple approach leveraging 
         Levenshtein distance to flag potential typosquatinng packages <a href="https://ieeexplore.ieee.org/abstract/document/9229803">Link</a>. 
         </p>
