--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,8 @@ ol li{
 <h2>Publications</h2>
 
 <ol type="1", class="c">
+  <li><u>Duc-Ly Vu</u>. <b>py2src: Towards the Automatic (and Reliable) Identification of Sources for PyPI Package</b>. To Appear In Proceedings of the The 36th IEEE/ACM International Conference on Automated Software Engineering, Student Research Competition Track. <a
+        href="">Preprint</a> </li>
    <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
         Antonino Sabetta. <b>LastPyMile: identifying the discrepancy between sources and
 packages</b>. To Appear In Proceedings of the The ACM 2021 Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE). <a
@@ -55,11 +57,6 @@ Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Co
         Journal of Intelligent & Fuzzy Systems, 2018. <a href="https://content.iospress.com/articles/journal-of-intelligent-and-fuzzy-systems/ifs169849">Paper</li>
 </ol>
 
- <h2>In Submission</h2>
- <ol type="1", class="c">
-     <li>Simone Pirroca, <u>Duc-Ly Vu</u>, Fabio Massacci, Ivan Pashchenko. <b>py2src: Automatic Identification of Source Code Repositories and Factors for Selecting New PyPI Packages</b><a
-        href=""> Submitted to the 15th ACM/IEEE International Symposium on Empirical Software Engineering and Measurement (ESEM)</a> </li>
-  </ol>
  
  <h2>Talks</h2>
 <ol type="1", class="c">
