--- a/publications.html
+++ b/publications.html
@@ -14,11 +14,11 @@ ol li{
 <h2>Publications</h2>
 
 <ol type="1", class="c">
-  <li><u>Duc-Ly Vu</u>. <b>py2src: Towards the Automatic (and Reliable) Identification of Sources for PyPI Package</b>. To Appear In Proceedings of the The 36th IEEE/ACM International Conference on Automated Software Engineering, Student Research Competition Track. <a
+  <li><u>Duc-Ly Vu</u>. <b>py2src: Towards the Automatic (and Reliable) Identification of Sources for PyPI Package</b>. To Appear In Proceedings of  The 36th IEEE/ACM International Conference on Automated Software Engineering, Student Research Competition Track. <a
         href="">Preprint</a> </li>
    <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
         Antonino Sabetta. <b>LastPyMile: identifying the discrepancy between sources and
-packages</b>. To Appear In Proceedings of the The ACM 2021 Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE). <a
+packages</b>. To Appear In Proceedings of  The ACM 2021 Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE). <a
         href="https://securitylab.disi.unitn.it/lib/exe/fetch.php?media=research_activities:experiments:esecfse2021.pdf">Preprint</a> </li>
  <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci <b>Please hold on: more time = more patches?
 Automated program repair as anytime algorithms</b>. To Appear in 2nd International Workshop on Automated Program Repair (APR 2021) In conjunction with 43rd International Conference on Software Engineering (ICSE 2021). <a
