--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,7 @@ Automated program repair as anytime algorithms</b>. To Appear in 2nd Internation
    <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
         Antonino Sabetta. <b>Towards Using Source Code Repositories to Identify Software
 Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security. <a
-        href="https://drive.google.com/file/d/1huQ5myhpEb3MOKuzjVGjwJzq31mUDTMS/view?usp=sharing">Paper</a> </li>
+        href="papers/ccs20poster-paper5.pdf">Paper</a> </li>
     <li><u>Duc-Ly Vu</u>. <b>What Developers Want for FOSS Dependency Management? Open Problems from
             a Qualitative Study</b>. REFSQ 2020 Doctoral Symposium. </li>
     <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
