--- a/publications.html
+++ b/publications.html
@@ -22,9 +22,10 @@ packages</b>. In Proceedings of The ACM 2021 Joint European Software Engineering
         href="papers/fse21main-p518-p-243dc28a78-52977-final.pdf">Preprint</a>, <a
         href="https://www.youtube.com/watch?v=COoqbCwNqbY">Video</a> </li>
  <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci <b>Please hold on: more time = more patches?
-Automated program repair as anytime algorithms</b>. To Appear in 2nd International Workshop on Automated Program Repair (APR 2021) In conjunction with 43rd International Conference on Software Engineering (ICSE 2021). <a
+Automated program repair as anytime algorithms</b>. In Proceedings of the 2nd International Workshop on Automated Program Repair (APR 2021) In conjunction with 43rd International Conference on Software Engineering (ICSE 2021). <a
         href="papers/apr2021.pdf">Camera-ready</a>, <a
-        href="https://github.com/assuremoss/Automated-Program-Repair/tree/main/AnyTime">Code</a></li>
+        href="https://github.com/assuremoss/Automated-Program-Repair/tree/main/AnyTime">Code</a>, <a
+        href="https://www.youtube.com/watch?v=j8ln1qbh2cI">Video</a></li>
    <li><u>Duc-Ly Vu</u>, Ivan Pashchenko, Fabio Massacci, Henrik Plate,
         Antonino Sabetta. <b>Towards Using Source Code Repositories to Identify Software
 Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Computer and Communications Security. <a
