--- a/publications.html
+++ b/publications.html
@@ -69,6 +69,7 @@ Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Co
    <li> <b>Typosquatting and Combosquatting Attacks on the Python Ecosystem</b>
         WACCO, 2020 <a href="https://wacco-workshop.org/past/2020/index.html"</li>
     <li> <b>Please hold on: more time = more patches? Automated program repair as anytime algorithms</b> 2nd International Workshop on Automated Program Repair (APR 2021) <a href="http://program-repair.org/workshop-2021/"</li>
+   <li> <b>LastPyMile: Identifying the Discrepancy between Sources and Packages</b> ESEC/FSE 2021 <a href="https://2021.esec-fse.org/details/fse-2021-papers/61/LastPyMile-Identifying-the-Discrepancy-between-Sources-and-Packages/"</li>
  </ol>
 
 </body>
