update link to hackernews

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ body {
       I was an Early stage researcher (ESR) of the <a href="https://www.necs-project.eu/">NECS project</a>
      Currently, I am working for the <a href="https://assuremoss.eu//">AssureMoss project</a>. I had a chance to work at SAP Security
       Research, France on the topic of software supply chain attacks. During the internship, we developed an approach and tool called LastPyMile to detect
-        code injections in software supply chain attacks, please check it out if you are interested <a href="https://securitylab.disi.unitn.it/lib/exe/fetch.php?media=research_activities:experiments:esecfse2021.pdf">link</a>. This work is mentioned on <a href="https://news.ycombinator.com/item?id=28082179">HackerNews</a> and <a href="https://reproducible-builds.org/de/reports/2021-07/">Reproducible-builds</a>
+        code injections in software supply chain attacks, please check it out if you are interested <a href="https://securitylab.disi.unitn.it/lib/exe/fetch.php?media=research_activities:experiments:esecfse2021.pdf">link</a>. This work was mentioned on <a href="https://news.ycombinator.com/item?id=28618074">HackerNews</a> and <a href="https://reproducible-builds.org/de/reports/2021-07/">Reproducible-builds</a>
       <p>I study and develop malware detection tools for computer systems. We developed an approach called <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ett.3789/">HIT4MAL</a> to classify malware using image transformations. Or a simple approach leveraging 
         Levenshtein distance to flag potential typosquatinng packages <a href="https://ieeexplore.ieee.org/abstract/document/9229803">Link</a>. 
         </p>
