changes personal email to protonmail

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ body {
       <p>I love writing and sharing techniques about Python. I like learning new stuff, especically those in programming, security and history. With a basic understanding
         of Python programming languagle, I like to help the others to automate the boring stuff.
         In my free time, I like reading books (especially self-help books) and playing guitar (I am learning keyboard now). I write some medium posts <a href="https://medium.com/@vuducly151092">@vuducly151092</a>. 
-        You can contact me by <a href = "mailto: vuducly151092@gmail.com">Email</a>. </p>
+        You can contact me by <a href = "mailto: lyvd@protonmail.com">Email</a>. </p>
       
       <p>I only make friends on Facebook with those I really know, those I really wanted to talk to. I share something on FB and you can follow me if you want.
       I want to make friends with those who share useful stuff that I can learn from</p>
