add talk vanues

--- a/publications.html
+++ b/publications.html
@@ -65,12 +65,12 @@ Supply Chain Attacks</b>. In Proceedings of the 2020 ACM SIGSAC Conference on Co
  <li> <b>MAL2IMAGE: Hybrid Image Transformation for Malware Classification</b>
         Joint DIMVA / ESSoS Poster Session, 2018 <a href="https://distrinet.cs.kuleuven.be/events/essos/2018/index.html"</li>
   <li> <b>Requirements from the Trenches: What Developers Want for FOSS Dependency Management?</b>
-        REFSQ, 2020 <a href="https://refsq.org/2020/conference-programme/doctoral-symposium"</li>
+        REFSQ, 2020 (Virtual) <a href="https://refsq.org/2020/conference-programme/doctoral-symposium"</li>
    <li> <b>Typosquatting and Combosquatting Attacks on the Python Ecosystem</b>
-        WACCO, 2020 <a href="https://wacco-workshop.org/past/2020/index.html"</li>
-    <li> <b>Please hold on: more time = more patches? Automated program repair as anytime algorithms</b> 2nd International Workshop on Automated Program Repair (APR 2021) <a href="http://program-repair.org/workshop-2021/"</li>
-   <li> <b>LastPyMile: Identifying the Discrepancy between Sources and Packages</b> ESEC/FSE 2021 <a href="https://2021.esec-fse.org/details/fse-2021-papers/61/LastPyMile-Identifying-the-Discrepancy-between-Sources-and-Packages/"</li>
-    <li> <b>LastPyMile: a lightweight approach for securing Python ecosystem from software supply chain attacks</b>SFSCon 2021 <a href="https://www.sfscon.it/talks/lastpymile-a-lightweight-approach-for-securing-python-ecosystem-from-software-supply-chain-attacks/"</li>
+        WACCO, 2020 (Virtual) <a href="https://wacco-workshop.org/past/2020/index.html"</li>
+    <li> <b>Please hold on: more time = more patches? Automated program repair as anytime algorithms</b> 2nd International Workshop on Automated Program Repair (Virtual) <a href="http://program-repair.org/workshop-2021/"</li>
+   <li> <b>LastPyMile: Identifying the Discrepancy between Sources and Packages</b> ESEC/FSE 2021 (Virtual) <a href="https://2021.esec-fse.org/details/fse-2021-papers/61/LastPyMile-Identifying-the-Discrepancy-between-Sources-and-Packages/"</li>
+    <li> <b>LastPyMile: a lightweight approach for securing Python ecosystem from software supply chain attacks</b> SFSCon 2021 (Bolzano, Italy) <a href="https://www.sfscon.it/talks/lastpymile-a-lightweight-approach-for-securing-python-ecosystem-from-software-supply-chain-attacks/"</li>
 
  </ol>
 
